--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,13 @@
+@misc{gs_denoiser,
+      title={Gradient Step Denoiser for convergent Plug-and-Play}, 
+      author={Samuel Hurault and Arthur Leclaire and Nicolas Papadakis},
+      year={2022},
+      eprint={2110.03220},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2110.03220}, 
+}
+
 @article{kamilov2023pnp_spm,
   author       = {Ulugbek S. Kamilov and Charles A. Bouman and Gregery T. Buzzard and Brendt Wohlberg},
   title        = {Plug-and-Play Methods for Integrating Physical and Learned Models in Computational Imaging: Theory, Algorithms, and Applications},
