--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,5 @@
-    % ============================================================
-% Template: Review on Plug-and-Play (PnP) Methods in Inverse Problems
-% Paste into Overleaf and adapt. British English, starred sections,
-% and \addcontentsline for ToC entries as requested.
+% ============================================================
+% Review on Plug-and-Play (PnP) Methods
 % ============================================================
 
 \documentclass[11pt,a4paper]{article}
@@ -36,11 +34,11 @@
     linkcolor=blue!40!black,
     citecolor=blue!40!black,
     urlcolor=blue!40!black,
-    pdfauthor={\textbf{TODO: Your Name}},
+    pdfauthor={\textbf{Thanh Trung Vu}},
     pdftitle={Plug-and-Play Methods in Inverse Problems: A Review}
 }
 
-% ---------- Macros (align with your notation preferences) ----------
+% ---------- Macros (notation preferences) ----------
 % Iteration index style (\cdot)^{(t)}
 \newcommand{\iter}[1]{#1^{(t)}}
 \newcommand{\itern}[2]{#1^{(t+#2)}}
@@ -79,10 +77,10 @@
 \begin{document}
 
 \begin{center}
-{\LARGE \textbf{Plug-and-Play Methods in Inverse Problems: A Review}}\\[0.5em]
-\textbf{TODO: Author(s)}\\
-\textit{TODO: Affiliation(s)}\\
-\texttt{TODO: email@address}
+{\LARGE \textbf{Plug-and-Play Methods}}\\[0.5em]
+\textbf{Thanh Trung Vu}\\
+\textit{University of Cambridge}\\
+\texttt{ttv22@cam.ac.uk}
 \end{center}
 
 \vspace{1em}
@@ -90,33 +88,64 @@
 \section*{Abstract}
 \addcontentsline{toc}{section}{Abstract}
 \noindent
-\textbf{Background:} Plug-and-Play (PnP) methods integrate learned or handcrafted denoisers as implicit regularisers within iterative solvers for inverse problems, enabling strong reconstructions across modalities \cite{kamilov2023pnp_spm,ahmad2020pnp_mri_spm}. \\
-\textbf{Purpose:} This review synthesises core PnP algorithmic families (ADMM, HQS, PGD/ISTA, primal–dual, and sampling-based), clarifies connections to Regularisation by Denoising (RED) \cite{reehorst2019red_tci}, and situates PnP alongside unrolling and diffusion/score-based priors \cite{monga2021unrolling_spm,daras2024diffusion_inverse_survey}. \\
-\textbf{Scope:} We emphasise mathematical structure and convergence assumptions \cite{hauptmann2024convergent_focm,scarlett2022theory_jsait}, denoiser classes (classical, CNN, diffusion), and evaluation protocols, including when uncertainty and interpretability are reported. \\
-\textbf{Conclusions:} PnP offers a modular route to physics-informed reconstruction with competitive performance, yet open challenges remain—guarantees with powerful denoisers, principled parameter–noise calibration, and reproducible, modality-specific benchmarks—which we address via consolidated best practices and a research agenda \cite{habring2024nn_regularization_review}.
+\textbf{Background:}
+    Plug-and-Play (PnP) methods integrate
+    learned or handcrafted denoisers as implicit regularisers
+    within iterative solvers for inverse problems,
+    enabling strong reconstructions across modalities
+    \cite{kamilov2023pnp_spm,ahmad2020pnp_mri_spm}.
+    \\
+\textbf{Purpose:}
+    This review synthesises core PnP algorithmic families
+    (ADMM, HQS,
+    % PGD/ISTA, primal-dual, and sampling-based
+    ),
+    clarifies connections to Regularisation by Denoising (RED) \cite{reehorst2019red_tci},
+    and situates PnP alongside unrolling and
+    diffusion/score-based priors \cite{monga2021unrolling_spm,daras2024diffusion_inverse_survey}.
+    \\
+\textbf{Scope:}
+    We emphasise mathematical structure and convergence assumptions \cite{hauptmann2024convergent_focm,scarlett2022theory_jsait},
+    denoiser classes (classical, CNN, diffusion), and evaluation protocols,
+    including when uncertainty and interpretability are reported.
+    \\
+\textbf{Conclusions:}
+    PnP offers a modular route to physics-informed reconstruction with competitive performance,
+    yet open challenges remain—guarantees with powerful denoisers, principled parameter-noise calibration,
+    and reproducible, modality-specific benchmarks—which we address via consolidated best practices and
+    a research agenda \cite{habring2024nn_regularization_review}.
 
 
 \section*{Keywords}
 \addcontentsline{toc}{section}{Keywords}
-Plug-and-Play; PnP-ADMM; PnP-HQS; Primal--Dual; RED; Denoising Prior; Learned Regulariser; Diffusion Models; Uncertainty; Inverse Problems; Imaging.
+Plug-and-Play; PnP-ADMM; PnP-HQS; Primal--Dual; RED; Denoising Prior; Learned Regulariser;
+Diffusion Models; Uncertainty; Inverse Problems; Imaging.
 
 % ============================================================
 \section*{1.\quad Introduction}
 \addcontentsline{toc}{section}{1. Introduction}
 \noindent
 \textbf{Motivation.} Many inverse problems seek
-$$
-\min_{\uvec \in \R^n} \; \E(\uvec) \equiv \tfrac{1}{2}\|\A \uvec - \fvec\|_2^2 + \lambda R(\uvec),
-$$
-where \(R\) enforces prior structure. PnP methods sidestep explicit \(R\) by invoking a denoiser \( \Denoise_{\sigma} \) within an optimisation scheme. \\
-\textbf{Contributions.} \TODO{Enumerate succinct bullets: taxonomy; unifying view; convergence map; benchmark guidance; open problems.} \\
-\textbf{Scope \& Exclusions.} We focus on deterministic PnP optimisation and sampling-based PnP; we summarise but do not exhaustively cover general learned unrolled networks.
+    $$
+    \min_{\uvec \in \R^n} \; \E(\uvec) \equiv \tfrac{1}{2}\|\A \uvec - \fvec\|_2^2 + \lambda R(\uvec),
+    $$
+    where \(R\) enforces prior structure.
+    PnP methods sidestep explicit \(R\) by invoking a denoiser \( \Denoise_{\sigma} \)
+    within an optimisation scheme.
+    \\
+% \textbf{Contributions.} \TODO{Enumerate succinct bullets: taxonomy; unifying view; convergence map; benchmark guidance; open problems.} \\
+% \textbf{Scope \& Exclusions.}
+%     We focus on deterministic PnP optimisation and sampling-based PnP;
+%     we summarise but do not exhaustively cover general learned unrolled networks.
 
 \paragraph{Box 1 (Key concepts).}
 \begin{itemize}[leftmargin=2em]
-    \item \textit{Denoiser as prior:} \( \Denoise_{\sigma}: \R^n \to \R^n \) acts as a proximity operator surrogate.
-    \item \textit{Averaged/nonexpansive mappings:} critical for fixed-point convergence.
-    \item \textit{Data-fidelity vs prior steps:} balancing step-sizes and penalty parameters.
+    \item \textit{Denoiser as prior:} \( \Denoise_{\sigma}: \R^n \to \R^n \)
+    acts as a proximity operator surrogate.
+    \item \textit{Averaged/nonexpansive mappings:}
+    critical for fixed-point convergence.
+    \item \textit{Data-fidelity vs prior steps:}
+    balancing step-sizes and penalty parameters.
 \end{itemize}
 
 % ============================================================
@@ -172,18 +201,18 @@ v^{(t+1)} &:= \Denoise_{\sigma}(x^{(t+1)}).
 \end{align*}
 Often \(\beta\) is increased across iterations (coarse-to-fine prior strength).
 
-\subsection*{3.3\quad PnP-PGD/ISTA}
-\addcontentsline{toc}{subsection}{3.3 PnP-PGD/ISTA}
-\noindent
-With step size \(\tau \in (0,2/\|\A^\top \A\|)\):
-$$
-x^{(t+1)} := \Denoise_{\sigma}\!\left(\, x^{(t)} - \tau \A^\top(\A x^{(t)} - \fvec) \,\right).
-$$
+% \subsection*{3.3\quad PnP-PGD/ISTA}
+% \addcontentsline{toc}{subsection}{3.3 PnP-PGD/ISTA}
+% \noindent
+% With step size \(\tau \in (0,2/\|\A^\top \A\|)\):
+% $$
+% x^{(t+1)} := \Denoise_{\sigma}\!\left(\, x^{(t)} - \tau \A^\top(\A x^{(t)} - \fvec) \,\right).
+% $$
 
-\subsection*{3.4\quad Primal--Dual PnP}
-\addcontentsline{toc}{subsection}{3.4 Primal--Dual PnP}
-\noindent
-Incorporate the denoiser as a proximal surrogate on the primal variable within a Chambolle--Pock style scheme. \TODO{State generic update; specify step-size condition \( \tau \sigma \|\A\|^2 < 1 \).}
+% \subsection*{3.4\quad Primal--Dual PnP}
+% \addcontentsline{toc}{subsection}{3.4 Primal--Dual PnP}
+% \noindent
+% Incorporate the denoiser as a proximal surrogate on the primal variable within a Chambolle--Pock style scheme. \TODO{State generic update; specify step-size condition \( \tau \sigma \|\A\|^2 < 1 \).}
 
 % ============================================================
 \section*{4.\quad Regularisation by Denoising (RED)}
@@ -196,19 +225,22 @@ $$
 Under Jacobian-symmetry and certain conditions, \( \nabla \E_{\mathrm{RED}}(x) = \A^\top(\A x - \fvec) + \lambda \big(x - \Denoise_{\sigma}(x)\big) \). \\
 \textbf{Relation to PnP.} \TODO{Discuss when PnP fixed points coincide with RED critical points; highlight differences in assumptions.}
 
-% ============================================================
-\section*{5.\quad Sampling-Based PnP and Score Methods}
-\addcontentsline{toc}{section}{5. Sampling-Based PnP and Score Methods}
-\noindent
-\textbf{PnP-ULA/PPnP:} Use a denoiser in Langevin dynamics for posterior sampling (approximate gradient via Tweedie relation or denoiser residual). \\
-\textbf{Score-based/DM priors:} Replace \(\Denoise\) by a score network \(s_{\theta}(x)\) (diffusion models) within proximal gradient or data-consistency sampling. \\
-\textbf{Uncertainty.} Posterior samples yield pixel-wise intervals and coverage; calibration metrics include ECE and empirical coverage. \TODO{Add definitions if included.}
+% % ============================================================
+% \section*{5.\quad Sampling-Based PnP and Score Methods}
+% \addcontentsline{toc}{section}{5. Sampling-Based PnP and Score Methods}
+% \noindent
+% \textbf{PnP-ULA/PPnP:} Use a denoiser in Langevin dynamics for posterior sampling (approximate gradient via Tweedie relation or denoiser residual). \\
+% \textbf{Score-based/DM priors:} Replace \(\Denoise\) by a score network \(s_{\theta}(x)\) (diffusion models) within proximal gradient or data-consistency sampling. \\
+% \textbf{Uncertainty.} Posterior samples yield pixel-wise intervals and coverage; calibration metrics include ECE and empirical coverage. \TODO{Add definitions if included.}
 
 
 % ============================================================
 \section*{6.\quad Convergence Theory: Assumptions and Guarantees}
 \addcontentsline{toc}{section}{6. Convergence Theory: Assumptions and Guarantees}
 \noindent
+
+\TODO{Gradient-step denoiser \cite{gs_denoiser}}
+
 \textbf{Assumption classes.}
 \begin{itemize}[leftmargin=2em]
     \item \emph{Averaged/nonexpansive denoisers:} ensure fixed-point convergence of operator compositions.
@@ -216,15 +248,15 @@ Under Jacobian-symmetry and certain conditions, \( \nabla \E_{\mathrm{RED}}(x) =
     \item \emph{Lipschitz gradients for data term:} \( \nabla g \) \( \Lips \)-Lipschitz for PGD-style schemes.
     \item \emph{Jacobian symmetry/PSD (RED):} enables descent interpretations.
 \end{itemize}
-\textbf{Representative results.} \TODO{State a generic theorem template and cite canonical results.}
+% \textbf{Representative results.} \TODO{State a generic theorem template and cite canonical results.}
 
-\begin{assumption}[Nonexpansive denoiser]
-There exists \(L < 1\) such that \( \|\Denoise_{\sigma}(x) - \Denoise_{\sigma}(y)\| \le L \|x-y\| \) for all \(x,y\).
-\end{assumption}
+% \begin{assumption}[Nonexpansive denoiser]
+% There exists \(L < 1\) such that \( \|\Denoise_{\sigma}(x) - \Denoise_{\sigma}(y)\| \le L \|x-y\| \) for all \(x,y\).
+% \end{assumption}
 
-\begin{theorem}[Fixed-point convergence (template)]
-Under Assumption~1 and standard step-size/penalty conditions for the chosen splitting, the PnP operator has at least one fixed point and the iterates \( \{\iter{x}\} \) converge to a fixed point of the composite mapping. \TODO{Insert precise statement for ADMM/HQS/PGD.}
-\end{theorem}
+% \begin{theorem}[Fixed-point convergence (template)]
+% Under Assumption~1 and standard step-size/penalty conditions for the chosen splitting, the PnP operator has at least one fixed point and the iterates \( \{\iter{x}\} \) converge to a fixed point of the composite mapping. \TODO{Insert precise statement for ADMM/HQS/PGD.}
+% \end{theorem}
 
 % ============================================================
 \section*{7.\quad Denoiser Taxonomy and Design}
@@ -236,128 +268,126 @@ Under Assumption~1 and standard step-size/penalty conditions for the chosen spli
 \textbf{Constraints:} nonexpansiveness enforcement, spectral normalisation, damping, residual scaling. \\
 \textbf{Domain adaptation:} generic vs domain-trained denoisers; transfer to MRI/CT/PCM.
 
-% ============================================================
-\section*{8.\quad Applications and Benchmarks}
-\addcontentsline{toc}{section}{8. Applications and Benchmarks}
-\noindent
-\textbf{Modalities:} Natural images, MRI, CT, phase retrieval, single-pixel imaging, PCM/LBIC. \\
-\textbf{Data-consistency solvers:} exact vs inexact \(x\)-steps; preconditioners. \\
-\textbf{Metrics:} PSNR/SSIM/LPIPS; wall-clock; memory; stability; for uncertainty, calibration and coverage. \\
-\textbf{Fairness:} same tuning budgets and stopping rules across methods.
+% % ============================================================
+% \section*{8.\quad Applications and Benchmarks}
+% \addcontentsline{toc}{section}{8. Applications and Benchmarks}
+% \noindent
+% \textbf{Modalities:} Natural images, MRI, CT, phase retrieval, single-pixel imaging, PCM/LBIC. \\
+% \textbf{Data-consistency solvers:} exact vs inexact \(x\)-steps; preconditioners. \\
+% \textbf{Metrics:} PSNR/SSIM/LPIPS; wall-clock; memory; stability; for uncertainty, calibration and coverage. \\
+% \textbf{Fairness:} same tuning budgets and stopping rules across methods.
 
-\begin{table}[h]
-\centering
-\caption{Comparison template across PnP families and applications.}
-\label{tab:taxonomy}
-\begin{tabular}{@{}llllll@{}}
-\toprule
-Algorithm & Splitting & Denoiser & Convergence Assumptions & $x$-step Solver & Notes \\
-\midrule
-PnP-ADMM & ADMM & \TODO{DRUNet} & Nonexpansive, $\rho$ tuned & CG/PCG & \TODO{} \\
-PnP-HQS & HQS & \TODO{BM3D} & $\beta\uparrow$ schedule & Closed-form/CG & \TODO{} \\
-PnP-PGD & PGD/ISTA & \TODO{DnCNN} & $\tau < 2/\|\A^\top\A\|$ & Grad step & \TODO{} \\
-Primal--Dual & CP & \TODO{RED-like} & $\tau\sigma\|\A\|^2<1$ & Linear ops & \TODO{} \\
-PnP-ULA & Sampling & \TODO{Score} & Step-size anneal & — & Uncertainty \\
-\bottomrule
-\end{tabular}
-\end{table}
+% \begin{table}[h]
+% \centering
+% \caption{Comparison template across PnP families and applications.}
+% \label{tab:taxonomy}
+% \begin{tabular}{@{}llllll@{}}
+% \toprule
+% Algorithm & Splitting & Denoiser & Convergence Assumptions & $x$-step Solver & Notes \\
+% \midrule
+% PnP-ADMM & ADMM & \TODO{DRUNet} & Nonexpansive, $\rho$ tuned & CG/PCG & \TODO{} \\
+% PnP-HQS & HQS & \TODO{BM3D} & $\beta\uparrow$ schedule & Closed-form/CG & \TODO{} \\
+% PnP-PGD & PGD/ISTA & \TODO{DnCNN} & $\tau < 2/\|\A^\top\A\|$ & Grad step & \TODO{} \\
+% Primal--Dual & CP & \TODO{RED-like} & $\tau\sigma\|\A\|^2<1$ & Linear ops & \TODO{} \\
+% PnP-ULA & Sampling & \TODO{Score} & Step-size anneal & — & Uncertainty \\
+% \bottomrule
+% \end{tabular}
+% \end{table}
 
-% ============================================================
-\section*{9.\quad Practical Guidance and Pitfalls}
-\addcontentsline{toc}{section}{9. Practical Guidance and Pitfalls}
-\noindent
-\textbf{Hyperparameters:} relation between \(\sigma\), penalty \(\rho/\beta\), and noise level. \\
-\textbf{Stopping criteria:} fixed iters vs residual thresholds vs validation-based. \\
-\textbf{Stability:} damping the denoiser, under-relaxation, iterate clipping. \\
-\textbf{Common pitfalls:} unfair baselines, hidden oracle tuning, inconsistent normalisation/crops.
+% % ============================================================
+% \section*{9.\quad Practical Guidance and Pitfalls}
+% \addcontentsline{toc}{section}{9. Practical Guidance and Pitfalls}
+% \noindent
+% \textbf{Hyperparameters:} relation between \(\sigma\), penalty \(\rho/\beta\), and noise level. \\
+% \textbf{Stopping criteria:} fixed iters vs residual thresholds vs validation-based. \\
+% \textbf{Stability:} damping the denoiser, under-relaxation, iterate clipping. \\
+% \textbf{Common pitfalls:} unfair baselines, hidden oracle tuning, inconsistent normalisation/crops.
 
-% ============================================================
-\section*{10.\quad Open Problems and Future Directions}
-\addcontentsline{toc}{section}{10. Open Problems and Future Directions}
-\noindent
-\begin{itemize}[leftmargin=2em]
-    \item Convergence with powerful (learned, nonexpansive-violating) denoisers.
-    \item Joint learning of \(\A\)-aware denoisers with guarantees.
-    \item Fast solvers for large-scale \(x\)-steps with structure (e.g., tomography).
-    \item Uncertainty quantification and calibration in PnP pipelines.
-    \item Interpretability of denoiser-induced priors.
-\end{itemize}
+% % ============================================================
+% \section*{10.\quad Open Problems and Future Directions}
+% \addcontentsline{toc}{section}{10. Open Problems and Future Directions}
+% \noindent
+% \begin{itemize}[leftmargin=2em]
+%     \item Convergence with powerful (learned, nonexpansive-violating) denoisers.
+%     \item Joint learning of \(\A\)-aware denoisers with guarantees.
+%     \item Fast solvers for large-scale \(x\)-steps with structure (e.g., tomography).
+%     \item Uncertainty quantification and calibration in PnP pipelines.
+%     \item Interpretability of denoiser-induced priors.
+% \end{itemize}
 
-% ============================================================
-\section*{11.\quad Methods (Optional: for Systematic/Structured Reviews)}
-\addcontentsline{toc}{section}{11. Methods (Optional)}
-\noindent
-\textbf{Search strategy.} \TODO{Databases, years, strings.} \\
-\textbf{Inclusion/exclusion.} \TODO{PnP focus, reconstruction tasks, metrics.} \\
-\textbf{Extraction schema.} Algorithm family; denoiser; assumptions; solver; metrics; datasets; code. \\
-\textbf{Synthesis.} Narrative by families; no meta-analysis unless metrics align.
+% % ============================================================
+% \section*{11.\quad Methods (Optional: for Systematic/Structured Reviews)}
+% \addcontentsline{toc}{section}{11. Methods (Optional)}
+% \noindent
+% \textbf{Search strategy.} \TODO{Databases, years, strings.} \\
+% \textbf{Inclusion/exclusion.} \TODO{PnP focus, reconstruction tasks, metrics.} \\
+% \textbf{Extraction schema.} Algorithm family; denoiser; assumptions; solver; metrics; datasets; code. \\
+% \textbf{Synthesis.} Narrative by families; no meta-analysis unless metrics align.
 
-% ============================================================
-\section*{12.\quad Reproducibility Checklist}
-\addcontentsline{toc}{section}{12. Reproducibility Checklist}
-\noindent
-\begin{itemize}[leftmargin=2em]
-    \item Release code and configs; fix random seeds.
-    \item Document \(\A\), pre-processing, and normalisation.
-    \item Report iteration budgets, wall-clock, and hardware.
-    \item Provide train/val/test splits and hyperparameter search ranges.
-\end{itemize}
+% % ============================================================
+% \section*{12.\quad Reproducibility Checklist}
+% \addcontentsline{toc}{section}{12. Reproducibility Checklist}
+% \noindent
+% \begin{itemize}[leftmargin=2em]
+%     \item Release code and configs; fix random seeds.
+%     \item Document \(\A\), pre-processing, and normalisation.
+%     \item Report iteration budgets, wall-clock, and hardware.
+%     \item Provide train/val/test splits and hyperparameter search ranges.
+% \end{itemize}
 
-% ============================================================
-\section*{Acknowledgements}
-\addcontentsline{toc}{section}{Acknowledgements}
-\noindent
-\TODO{Funding, collaborators, data providers.}
-
-% ============================================================
-\section*{References}
-\addcontentsline{toc}{section}{References}
-\noindent
-% Use your BibTeX file or manual entries; examples:
-% \begin{thebibliography}{9}
-% \bibitem{Venkatakrishnan2013} S. V. Venkatakrishnan et al., Plug-and-Play Priors for Model Based Reconstruction, 2013.
-% \bibitem{Romano2017} Y. Romano et al., The Little Engine that Could: Regularization by Denoising (RED), 2017.
-% \end{thebibliography}
+% % ============================================================
+% \section*{Acknowledgements}
+% \addcontentsline{toc}{section}{Acknowledgements}
+% \noindent
+% \TODO{Funding, collaborators, data providers.}
 
 % ============================================================
-% APPENDICES
-% ============================================================
-\clearpage
-\appendix
+% \section*{References}
+% \addcontentsline{toc}{section}{References}
+% \noindent
 
-\section*{Appendix A:\quad Notation Summary}
-\addcontentsline{toc}{section}{Appendix A: Notation Summary}
-\noindent
-\begin{tabular}{@{}ll@{}}
-\toprule
-Symbol & Meaning \\
-\midrule
-$\A \in \R^{m\times n}$ & Forward operator \\
-$\fvec \in \R^{m}$ & Observed data \\
-$\uvec \in \R^{n}$ & Unknown signal/image \\
-$\Denoise_{\sigma}$ & Denoiser with parameter $\sigma$ \\
-$\rho,\beta,\tau$ & ADMM/HQS/PGD step or penalty parameters \\
-\bottomrule
-\end{tabular}
+\bibliographystyle{plain}
+\bibliography{references}
 
-\section*{Appendix B:\quad Stopping Rules (Templates)}
-\addcontentsline{toc}{section}{Appendix B: Stopping Rules (Templates)}
-\noindent
-\textbf{Relative change:}
-$$
-\frac{\|x^{(t+1)} - x^{(t)}\|_2}{\|x^{(t)}\|_2} < \epsilon.
-$$
-\textbf{Primal/dual residuals (ADMM):} \TODO{Define $r^{(t)}$ and $s^{(t)}$, thresholds, and scaling.}
+% % ============================================================
+% % APPENDICES
+% % ============================================================
+% \clearpage
+% \appendix
 
-\section*{Appendix C:\quad Evaluation Metrics}
-\addcontentsline{toc}{section}{Appendix C: Evaluation Metrics}
-\noindent
-\textbf{PSNR:}
-$$
-\mathrm{PSNR} = 10 \log_{10}\!\left(\frac{\mathrm{MAX}^2}{\mathrm{MSE}}\right), \quad
-\mathrm{MSE} = \frac{1}{n}\|\hat{x} - x^\star\|_2^2.
-$$
-\textbf{SSIM/LPIPS:} \TODO{Formulas or references.}
-\textbf{Uncertainty (optional):} Expected calibration error (ECE), coverage vs nominal.
+% \section*{Appendix A:\quad Notation Summary}
+% \addcontentsline{toc}{section}{Appendix A: Notation Summary}
+% \noindent
+% \begin{tabular}{@{}ll@{}}
+% \toprule
+% Symbol & Meaning \\
+% \midrule
+% $\A \in \R^{m\times n}$ & Forward operator \\
+% $\fvec \in \R^{m}$ & Observed data \\
+% $\uvec \in \R^{n}$ & Unknown signal/image \\
+% $\Denoise_{\sigma}$ & Denoiser with parameter $\sigma$ \\
+% $\rho,\beta,\tau$ & ADMM/HQS/PGD step or penalty parameters \\
+% \bottomrule
+% \end{tabular}
+
+% \section*{Appendix B:\quad Stopping Rules (Templates)}
+% \addcontentsline{toc}{section}{Appendix B: Stopping Rules (Templates)}
+% \noindent
+% \textbf{Relative change:}
+% $$
+% \frac{\|x^{(t+1)} - x^{(t)}\|_2}{\|x^{(t)}\|_2} < \epsilon.
+% $$
+% \textbf{Primal/dual residuals (ADMM):} \TODO{Define $r^{(t)}$ and $s^{(t)}$, thresholds, and scaling.}
+
+% \section*{Appendix C:\quad Evaluation Metrics}
+% \addcontentsline{toc}{section}{Appendix C: Evaluation Metrics}
+% \noindent
+% \textbf{PSNR:}
+% $$
+% \mathrm{PSNR} = 10 \log_{10}\!\left(\frac{\mathrm{MAX}^2}{\mathrm{MSE}}\right), \quad
+% \mathrm{MSE} = \frac{1}{n}\|\hat{x} - x^\star\|_2^2.
+% $$
+% \textbf{SSIM/LPIPS:} \TODO{Formulas or references.}
+% \textbf{Uncertainty (optional):} Expected calibration error (ECE), coverage vs nominal.
 
 \end{document}
