--- a/working/main.tex
+++ b/working/main.tex
@@ -35,7 +35,7 @@
     style=alphabetic,
     maxnames = 100,
 ]{biblatex}
-\addbibresource{references2.bib}
+\addbibresource{references.bib}
 \usepackage[nameinlink,capitalize]{cleveref}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
